@startuml

package dao {


    abstract class ReservationDao{
        # {static} ReservationDao()
        - {static} LazyHolder()
        + {static} getInstance() : ReservationDao
        getUserByReservationId(reservationId : int): User
        getOfferByReservationId(reservationId : int): Offer
        getAvailabilityByOfferAndDates(offerId : int, dateStartBooking : Date, dateEndBooking : Date) : boolean
    }
    class ReservationDaoMySQL
    AbstractFactoryDao <|-- FactoryDaoMySQL
    ReservationDao <|-- ReservationDaoMySQL

    interface DAO<T>{
        find(id : int) : T
        create(T obj) : T
        update(T obj) : T
        delete(T obj) : boolean
    }

    abstract AbstractFactoryDao{
        - {static} final connectionDB : ConnectionDB
        + {static} getFactory(type : TypeDB) : AbstractFactoryDao
        + getReservationDao() : ReservationDao
    }

    class FactoryDaoMySQL{
    }


    DAO <|.. ReservationDao
}
package db{
    class ConnectionDBMySQL{
        - connection : Connection
        - ConnectionDBMySQL()
        + {static} getInstance() : ConnectionDBMySQL
        + getDb() : Connection
    }

    class LazyHolderDB{
        + {static} final INSTANCE : ConnectionDBMySQL
    }
    interface ConnectionDB
    ConnectionDBMySQL -Left-> LazyHolderDB
    ConnectionDBMySQL .up.|> ConnectionDB

}
package business{
    class SessionFacade{
            + getUser() : User
        }

    class ReservationFacade{
        + reserve(offerId : int, dateStartBooking : Date, getDateEndBooking : Date) : void
        + viewAvailability(offerId : int) : void
        + viewActiveReservations(userId: int) : Reservation[]
        + confirmReservation(reservationId : int) : void
        + cancelReservation(reservationId : int) : void
    }

    class Reservation{
        -dateStartBooking : Date
        -dateEndBooking : Date
        -isConfirmed : boolean
        +Reservation(offerId : int, dateS : Date, sateE : Date)
        +getDateStartBooking() : Date
        +getDateEndBooking() : Date
        +getIsConfirmed() : boolean
        +getUser() : User
        +getOffer() : Offer
        +setDateStartBooking(dateS : Date)
        +setDateEndBooking(dateE : Date)
        +setIsConfirmed(confirmed : boolean)
    }
    ReservationFacade --> SessionFacade

}

package gui{

    class LoadView{
        + {static} load(nameFxml : Parent) : Parent
        + {static} changeScreen(actionEvent : ActionEvent, view : String) : void
    }

    package controller{
        class ReservationAvailabilityController{
            - calendar : DatePicker
            - error_availability_msg : Label
            + handleReservation(actionEvent : ActionEvent) : void
            + handleOfferAvailability(actionEvent : ActionEvent) : void
        }

        class ReservationManagementController{
            - infos_offer : ListView
            + handleActiveReservation(actionEvent : ActionEvent) : void
            + handleReservationConfirmation(actionEvent : ActionEvent) : void
            + handleCancelReservation(actionEvent : ActionEvent) : void
        }

    }
}

ReservationFacade <--Up- ReservationAvailabilityController
ReservationFacade <--Up- ReservationManagementController
ReservationDao --> AbstractFactoryDao



@enduml